--- a/Practice_6/FlowerService/Views/Plantations/Create.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model FlowerServiceLibrary.Flower
+﻿@model FlowerServiceLibrary.Plantation
 
-<h1>Редактирование информации о цветке</h1>
+<h1>Добавление информации о цветке</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -13,13 +13,13 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LatinName" class="control-label"></label>
-                <input asp-for="LatinName" class="form-control" />
-                <span asp-validation-for="LatinName" class="text-danger"></span>
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <a asp-action="Index" class="btn btn-danger">Назад</a>
-                <input type="submit" value="Редактировать" class="btn btn-success" />
+                <input type="submit" value="Добавить" class="btn btn-success" />
             </div>
         </form>
     </div>
