Update Plantation controller

--- a/Practice_6/FlowerService/Views/Plantations/Details.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/Details.cshtml
@@ -2,22 +2,11 @@
 @model FlowerServiceLibrary.Plantation
 
 
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h1>Details</h1>
+<h1>Подробности о плантации</h1>
 
 <div>
-    <h4>Plantation</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-4">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
         <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
