--- a/Practice_6/FlowerService/Views/Plantations/Edit.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/Edit.cshtml
@@ -35,7 +35,7 @@
                                 <span class="float-right">
                                     <a asp-action="FlowerDetails" asp-route-placeId="@plantationFlower.PlaceId" asp-route-flowerId="@plantationFlower.FlowerId" class="btn btn-info">Подробности</a>
                                     <a asp-action="FlowerEdit" asp-route-placeId="@plantationFlower.PlaceId" asp-route-flowerId="@plantationFlower.FlowerId" class="btn btn-primary">Редактировать</a>
-                                    <a asp-action="FlowerDelete" asp-route-placeId="@plantationFlower.PlaceId" asp-route-flowerId="@plantationFlower.FlowerId" onclick="return confirm('Вы действительно хотите удалить плантацию ?')" }) class="btn btn-danger">Удалить</a>
+                                    <a asp-action="FlowerDelete" asp-route-placeId="@plantationFlower.PlaceId" asp-route-flowerId="@plantationFlower.FlowerId" onclick="return confirm('Вы действительно хотите удалить цветы ?')" }) class="btn btn-danger">Удалить</a>
                                 </span>
                             </div>
                         }
