--- a/Practice_6/FlowerService/Views/Plantations/FlowerCreate.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/FlowerCreate.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Add">
+        <form asp-action="FlowerCreate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="PlaceId" type="hidden"/>
             <div class="form-group">
