--- a/Practice_6/FlowerService/Views/Plantations/FlowerEdit.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/FlowerEdit.cshtml
@@ -1,23 +1,16 @@
 ﻿@model FlowerServiceLibrary.PlantationFlower
 
-@{
-    ViewData["Title"] = "FlowerEdit";
-}
+<h1>Редактирование информации о цветке</h1>
 
-<h1>FlowerEdit</h1>
-
-<h4>PlantationFlower</h4>
+<h4>@Model.Flower.Name</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="FlowerEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="PlaceId" type="hidden" />
+            <input asp-for="FlowerId" type="hidden" />
 
-            <div class="form-group">
-                <label asp-for="FlowerId" class="control-label"></label>
-                <select asp-for="FlowerId" asp-items="@ViewBag.Flowers" class="form-control"></select>
-                <span asp-validation-for="FlowerId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
                 <input asp-for="Amount" class="form-control" />
