--- a/Practice_6/FlowerService/Views/Plantations/FlowerDetails.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/FlowerDetails.cshtml
@@ -1,36 +1,33 @@
 ﻿@model FlowerServiceLibrary.PlantationFlower
 
-@{
-    ViewData["Title"] = "FlowerDetails";
-}
-
-<h1>FlowerDetails</h1>
-
+<h1>Подробности о цветке</h1>
 <div>
-    <h4>PlantationFlower</h4>
+    <h4>@Model.Flower.Name</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.PlaceId)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PlaceId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.FlowerId)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FlowerId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Amount)
         </dd>
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+<div class="form-group">
+    <a asp-action="Edit" asp-route-id="@Model.PlaceId" class="btn btn-primary">Назад</a>
+    <a asp-action="FlowerEdit" asp-route-placeId="@Model.PlaceId" asp-route-flowerId="@Model.FlowerId"  class="btn btn-info">Редактировать</a>
+    <a asp-action="FlowerDelete"asp-route-placeId="@Model.PlaceId" asp-route-flowerId="@Model.FlowerId" class="btn btn-danger">Удалить</a>
 </div>
+
