--- a/Practice_6/FlowerService/Views/Shared/_Layout.cshtml
+++ b/Practice_6/FlowerService/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Plantations" asp-action="Index">Plantations</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Warehouses" asp-action="Index">Warehouses</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
