Updated SupplyRepository, added SupplyController and Views

--- a/Practice_6/FlowerService/Views/Plantations/Create.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FlowerServiceLibrary.Plantation
 
-<h1>Добавление информации о цветке</h1>
+<h1>Добавление информации о плантации</h1>
 
 <hr />
 <div class="row">
