--- a/Practice_6/FlowerService/Views/Shared/_Layout.cshtml
+++ b/Practice_6/FlowerService/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Warehouses" asp-action="Index">Warehouses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Supplies" asp-action="Index">Supplies</a>
                         </li>
                     </ul>
                 </div>
