--- a/Practice_6/FlowerService/Views/Flowers/Details.cshtml
+++ b/Practice_6/FlowerService/Views/Flowers/Details.cshtml
@@ -1,17 +1,11 @@
 ﻿@model FlowerServiceLibrary.Flower
 
 
-<h1>Продробности</h1>
+<h1>Продробности о цветке</h1>
 
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-4">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
         <dt class = "col-sm-4">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
