--- a/Practice_6/FlowerService/Views/Plantations/Details.cshtml
+++ b/Practice_6/FlowerService/Views/Plantations/Details.cshtml
@@ -20,6 +20,7 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
     </dl>
+    <h4>Цветы на плантации</h4>
     <div class="form-group">
         <div class="list-group">
             @if (Model.PlantationFlowers.Count() == 0)
