--- a/Practice_6/FlowerService/Views/Supplies/Details.cshtml
+++ b/Practice_6/FlowerService/Views/Supplies/Details.cshtml
@@ -37,6 +37,8 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
+    <h4>Цветы в поставке</h4>
+
     <div class="form-group">
         <div class="list-group">
             @if (Model.SupplyFlowers.Count() == 0)
