--- a/Practice_6/FlowerService/Views/Supplies/FlowerDetails.cshtml
+++ b/Practice_6/FlowerService/Views/Supplies/FlowerDetails.cshtml
@@ -12,13 +12,13 @@
             @Html.DisplayFor(model => model.Supply.Id)
         </dd>
         <dt class="col-sm-4">
-            @Html.DisplayNameFor(model => model.Supply.Plantation.Name)
+            @Html.DisplayName("Название плантации")
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Supply.Plantation.Name)
         </dd>
         <dt class="col-sm-4">
-            @Html.DisplayNameFor(model => model.Supply.Warehouse.Name)
+            @Html.DisplayName("Название склада")
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Supply.Warehouse.Name)
