--- a/Practice_6/FlowerService/Views/Warehouses/Details.cshtml
+++ b/Practice_6/FlowerService/Views/Warehouses/Details.cshtml
@@ -20,6 +20,7 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
     </dl>
+    <h4>Цветы на складе</h4>
     <div class="form-group">
         <div class="list-group">
             @if (Model.WarehouseFlowers.Count() == 0)
