--- a/Practice_6/FlowerService/Views/Warehouses/Edit.cshtml
+++ b/Practice_6/FlowerService/Views/Warehouses/Edit.cshtml
@@ -18,6 +18,7 @@
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
+            <h4>Цветы на складе</h4>
             <div class="form-group">
                 <div class="list-group">
                     @if (Model.WarehouseFlowers.Count() == 0)
